# MyCPPPractice

./: .gitmodules  CMakeLists.txt  CMakeLists_8txt.html  Makefile  README.md  dir_08ebf401352d0c333d3a643fc2ed36cf.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  my__lib_2CMakeLists_8txt.html  my__lib_8cc.html  my__lib_8cc__incl.dot  my__lib_8h.html  my__lib_8h__dep__incl.dot  my__lib_8h_source.html
app/: CMakeLists.txt  main.cc
cmake/: Tools.cmake
samples/: packaged_task.txt
src/: CMakeLists.txt
src/design_patterns/: CMakeLists.txt
src/design_patterns/AdapterPattern/: AdapterPattern.hpp  main.txt
src/design_patterns/BridgePattern/: BridgePattern.hpp
src/design_patterns/BuilderPattern/: FluentBuilder.hpp  GroovyStyleBuilder.hpp
src/design_patterns/BuilderPattern/BuilderFacets/: Facets.cpp  Person.cpp  Person.hpp  PersonAddressBuilder.hpp  PersonBuilder.cpp  PersonBuilder.hpp  PersonJobBuilder.hpp
src/design_patterns/DecoratorPattern/: DynamicDecorator.hpp  FunctionalDecorator.hpp  StaticDecorator.hpp  main.txt
src/design_patterns/FacadePattern/: FacadePattern.hpp
src/design_patterns/FactoryPattern/: AbstractFactory.hpp  Factory.hpp  FactoryMethod.hpp  InnerFactory.hpp
src/design_patterns/PrototypePattern/: PrototypePattern.hpp
src/design_patterns/SOLID/DependencyInversionPrinciple/: FollowingDIP.hpp  NotFollowingDIP.hpp  main.txt
src/design_patterns/SOLID/InterfaceSegregationPrinciple/: FollowingISP.hpp  NotFollowingISP.hpp
src/design_patterns/SOLID/LiskovSubstitutionPrinciple/: FollowingLSP.hpp  NotFollowingLSP.hpp  main.txt
src/design_patterns/SOLID/OpenClosedPrinciple/: FollowingOCP.hpp  NotFollowingOCP.hpp  main.txt
src/design_patterns/SOLID/SingleResponsibilityPrinciple/: FollowingSRP.hpp  NotFollowingSRP.hpp
src/design_patterns/SingletonPattern/: Singleton.hpp
src/my_lib/: CMakeLists.txt  MyVector.hpp
tests/: main.cc
